# Tenet

./: .gitignore  .tenetignore.example  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/: index.html  script.js  style.css  tenet_0.1.0_x64_en-US.msi
server/: package-lock.json  package.json  server.js
src/: App.tsx  index.css  main.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/processor/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/versioning/: mod.rs
src-tauri/src/watcher/: mod.rs
src/cli/: mod.rs
src/components/: AIAssistant.tsx  DiffViewer.tsx  FileExplorer.tsx  Notifications.tsx  SettingsPanel.tsx  Timeline.tsx
src/metadata/: mod.rs
src/processor/: mod.rs
src/storage/: mod.rs
src/store/: useAppStore.ts
src/utils/: mod.rs
src/versioning/: mod.rs
src/watcher/: mod.rs
tenet-cli/: README.md  index.js  package.json
tenet-sdk/: README.md  setup.py
tenet-sdk/tenet/: __init__.py  tenet.py
test_dir/.tenet/metadata/: index.json
