[package]
name = "tenet"
version = "0.1.0"
edition = "2021"
description = "TENET - Time-Travel File System. Track file changes and restore any previous version."
authors = ["S Guru Vishnu"]
license = "MIT"

[[bin]]
name = "tenet"
path = "src/main.rs"

[dependencies]
# File system watching (debouncer re-exports notify v7)
notify-debouncer-mini = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Terminal colors
colored = "2"

# Glob pattern matching
glob = "0.3"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "tenet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
